--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "locomotive-scroll": "^4.1.4",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -15,8 +16,15 @@
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^0.18.0",
+    "js-yaml": "^4.1.0",
+    "marked": "^4.0.12",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22",
     "typescript": "4.5.5"
   }
 }
