--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,20 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": "./",
+    "paths": {
+      "@includes/*": ["_includes/*"],
+      "@layouts/*": ["_layouts/*"],
+      "@posts/*": ["_posts/*"],
+      "@api": ["api/index"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "_includes/_document.js"
+  ],
   "exclude": ["node_modules"]
 }
