--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,14 +19,16 @@
       "@includes/*": ["_includes/*"],
       "@layouts/*": ["_layouts/*"],
       "@posts/*": ["_posts/*"],
-      "@api": ["api/index"]
+      "@api": ["api/index"],
+      "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "_includes/_document.js"
+    "_includes/_document.js",
+    ".contentlayer/generated"
   ],
   "exclude": ["node_modules"]
 }
