--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.0.0",
+    "@next/mdx": "^12.1.0",
     "contentlayer": "^0.1.1",
     "next": "12.0.10",
     "next-contentlayer": "^0.1.1",
+    "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.5.0",
