--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-syntax-typescript": "^7.16.7",
+    "@emotion/css": "^11.7.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.1.0",
+    "babel-plugin-styled-components": "^2.0.6",
     "contentlayer": "^0.1.1",
     "next": "12.0.10",
+    "next-compose-plugins": "^2.2.1",
     "next-contentlayer": "^0.1.1",
     "next-themes": "^0.1.1",
     "next-yaml": "^1.0.1",
@@ -28,16 +35,23 @@
     "unified": "^10.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "17.0.17",
     "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-twin": "^1.0.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "isomorphic-dompurify": "^0.18.0",
     "js-yaml": "^4.1.0",
     "marked": "^4.0.12",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.22",
+    "tailwindcss": "^3.0.23",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.5.5"
   }
 }
