--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap --config next-sitemap.js"
   },
   "dependencies": {
     "@babel/plugin-syntax-typescript": "^7.16.7",
+    "@code-hike/mdx": "^0.3.0-next.29",
     "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.8.2",
     "@emotion/server": "^11.4.0",
@@ -20,17 +22,20 @@
     "next": "12.0.10",
     "next-compose-plugins": "^2.2.1",
     "next-contentlayer": "^0.1.1",
+    "next-seo": "^5.1.0",
+    "next-sitemap": "^2.5.7",
     "next-themes": "^0.1.1",
     "next-yaml": "^1.0.1",
+    "plaiceholder": "^2.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "^1.5.0",
+    "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.0.3",
     "rehype-img-size": "^1.0.1",
     "rehype-prism-plus": "^1.3.1",
     "rehype-slug": "^5.0.1",
-    "remark-external-links": "^9.0.1",
     "remark-gfm": "^3.0.1",
     "unified": "^10.1.1"
   },
