table of content

--- a/data/config/config.yml
+++ b/data/config/config.yml
@@ -1,4 +1,5 @@
 url: 'localhost:3000'
+# Home Configuration
 home:
   title: 'My Blog'
   description: 'This is a rick blog'
@@ -6,10 +7,10 @@ home:
     mobile: '2'
     tablet: '2'
     desktop: '2'
-  postsPerPage: '2'
+  postsPerPage: '4'
   postsOrder: 'title'
   postsSort: 'asc'
-
+# Archive Configuration
 archive:
   title: 'Blog'
   description: 'I will Share my experince and more thing...'
@@ -19,10 +20,21 @@ archive:
     desktop: '4'
   postsOrder: 'title'
   postsSort: 'ASC'
-  postsPerPage: '2'
-
+  postsPerPage: '4'
+# Navbar Menu
+menu:
+  - name: 'Home'
+    link: '/'
+    img: '/mockup/me.jpg'
+  - name: 'Blog'
+    link: '/blog'
+    img: '/mockup/cover.jpg'
+  - name: 'About'
+    link: '/about'
+    img: '/mockup/rick.jpg'
+# Footer
 footerText: ' Rick. All Rights Reserved.'
-
+# Basic SEO Configuration
 openGraph:
   type: 'website'
   locale: 'id_ID'
