--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "17.0.17",
     "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.14",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
