--- a/data/config/config.yml
+++ b/data/config/config.yml
@@ -1,4 +1,5 @@
 url: 'localhost:3000'
+
 # Home Configuration
 home:
   title: 'My Blog'
@@ -10,6 +11,7 @@ home:
   postsPerPage: '4'
   postsOrder: 'title'
   postsSort: 'asc'
+
 # Archive Configuration
 archive:
   title: 'Blog'
@@ -21,6 +23,7 @@ archive:
   postsOrder: 'title'
   postsSort: 'ASC'
   postsPerPage: '4'
+
 # Navbar Menu
 menu:
   - name: 'Home'
@@ -32,12 +35,22 @@ menu:
   - name: 'About'
     link: '/about'
     img: '/mockup/rick.jpg'
+
 # Footer
 footerText: ' Rick. All Rights Reserved.'
+
+# Social
+social:
+  - name: 'twitter'
+    link: '#twitter'
+  - name: 'facebook'
+    link: '#facebook'
+  - name: 'linkedin'
+    link: '#linkdin'
+
 # Basic SEO Configuration
 openGraph:
   type: 'website'
   locale: 'id_ID'
   site_name: 'MrCatDev'
-
 titleTemplate: '%s | MrCatDev'
