--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-typescript": "^7.16.7",
+    "@barba/core": "^2.9.7",
     "@code-hike/mdx": "^0.3.0-next.29",
     "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.8.2",
@@ -19,7 +20,8 @@
     "@next/mdx": "^12.1.0",
     "babel-plugin-styled-components": "^2.0.6",
     "contentlayer": "^0.1.1",
-    "next": "12.0.10",
+    "gsap": "^3.9.1",
+    "next": "^12.1.1",
     "next-compose-plugins": "^2.2.1",
     "next-contentlayer": "^0.1.1",
     "next-seo": "^5.1.0",
@@ -33,10 +35,12 @@
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.0.3",
+    "rehype-highlight": "^5.0.2",
     "rehype-img-size": "^1.0.1",
     "rehype-prism-plus": "^1.3.1",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
     "unified": "^10.1.1"
   },
   "devDependencies": {
