--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@barba/core": "^2.9.7",
     "@code-hike/mdx": "^0.3.0-next.29",
     "@emotion/css": "^11.7.1",
+    "@emotion/primitives": "^11.0.0",
     "@emotion/react": "^11.8.2",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.1.0",
     "babel-plugin-styled-components": "^2.0.6",
-    "contentlayer": "^0.1.1",
+    "contentlayer": "^0.2.1",
     "gsap": "^3.9.1",
+    "html-entities": "^2.3.3",
     "next": "^12.1.1",
     "next-compose-plugins": "^2.2.1",
-    "next-contentlayer": "^0.1.1",
+    "next-contentlayer": "^0.2.1",
     "next-seo": "^5.1.0",
     "next-sitemap": "^2.5.7",
     "next-themes": "^0.1.1",
