--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@helper/*": ["helper"],
       "@api/*": ["_api/*"],
       "@types": ["types/index.ts"],
-      "contentlayer/generated": [".contentlayer/generated"]
+      "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
   "include": [
