--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@helper/*": ["helper"],
       "@api/*": ["_api/*"],
       "@types": ["types/index.ts"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
+      "contentlayer/generated": ["./.contentlayer/generated"],
+      "@public": ["public/*"]
     }
   },
   "include": [
